<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="playlist_maker">Playlist maker</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="terms_of_use">Пользовательское соглашение</string>
    <string name="track_image">Track Image</string>
    <string name="search_text">Search Text</string>
    <string name="update">Обновить</string>
    <string name="network_error">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="no_tracks">Ничего не нашлось</string>
    <string name="clear_history">Очистить историю</string>
    <string name="you_were_looking_for">Вы искали</string>
    <string name="track_name">Название трека</string>
    <string name="country">Страна</string>
    <string name="genre">Жанр</string>
    <string name="year">Год</string>
    <string name="album">Альбом</string>
    <string name="duration">Длительность</string>
    <string name="artist_name">Имя артиста</string>
    <string name="track_time">trackTime</string>
    <string name="playlist_created">Плэйлист создан</string>
    <string name="default_track_time">00:00</string>
    <string name="track_saved_to_history">Трек сохранен в истории</string>
    <string name="email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="yandex_offer_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="practicum_catalog_link">https://practicum.yandex.ru/android-developer/?from=catalog</string>
    <string name="slaviksis_yandex_ru">slaviksis@yandex.ru</string>
    <string name="media_is_empty">Ваша медиатека пуста</string>
    <string name="no_playlists">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="playlist_name">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="playlist_button_text">Создать</string>
    <string name="confirmation_dialog_title">Завершить создание плейлиста?</string>
    <string name="confirmation_dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="confirmation_dialog_negative">Отмена</string>
    <string name="confirmation_dialog_positive">Завершить</string>
    <string name="playlist_created_snackbar">Плейлист %1$s создан</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="added_to_playlist">Добавлено в %1$s</string>
    <string name="track_already_in_playlist">Трек уже добавлен в плейлист %1$s</string>
    <plurals name="track">
        <item quantity="one">трек</item>
        <item quantity="few">трека</item>
        <item quantity="many">треков</item>
        <item quantity="other">треков</item>
    </plurals>
</resources>