<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MatchParentLayoutStyle"
    android:orientation="vertical"
    android:background="?attr/colorOnPrimary"
    tools:context=".settings.ui.activity.SettingsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/back_button"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="@string/settings"
        app:titleTextColor="@color/search_back_button" />

    <LinearLayout
        style="@style/VerticalLinearLayoutStyle">

        <com.google.android.material.switchmaterial.SwitchMaterial
            style="@style/SettingsButtonStyle"
            android:id="@+id/theme_switcher"
            android:text="@string/dark_theme"
            android:layout_gravity="start"
            android:layout_width="match_parent"
            android:layout_height="64dp"/>

        <Button
            android:id="@+id/support_button"
            android:text="@string/share_app"
            android:drawableEnd="@drawable/ic_share"
            style="@style/SettingsButtonStyle" />

        <Button
            android:id="@+id/share_button"
            android:text="@string/support"
            android:drawableEnd="@drawable/ic_support"
            style="@style/SettingsButtonStyle" />

        <Button
            android:id="@+id/terms_button"
            android:text="@string/terms_of_use"
            android:drawableEnd="@drawable/ic_arrow_forward"
            style="@style/SettingsButtonStyle" />

    </LinearLayout>
</LinearLayout>