<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="?attr/colorPrimaryDark"
    android:padding="16dp"
    tools:context=".presentation.main.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/playlist_maker"
        android:textColor="@color/white"
        android:textSize="26sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/search"
            style="@style/MainScreenButtonStyle"
            android:text="@string/search"
            app:icon="@drawable/ic_search" />

        <Button
            android:id="@+id/media"
            style="@style/MainScreenButtonStyle"
            android:text="@string/media"
            app:icon="@drawable/ic_media" />

        <Button
            android:id="@+id/settings"
            style="@style/MainScreenButtonStyle"
            android:text="@string/settings"
            app:icon="@drawable/ic_settings" />

    </LinearLayout>
</LinearLayout>