<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".media.ui.activity.MediaActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarMedia"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintBottom_toTopOf="@+id/guideline_left"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="@string/media"
        app:titleTextColor="@color/primary_text" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabIndicatorFullWidth="false"
        app:tabTextAppearance="@style/TabTextAppearance"
        app:layout_constraintTop_toBottomOf="@+id/toolbarMedia"
        app:tabIndicatorColor="@color/primary_text"
        app:tabTextColor="@color/primary_text"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        app:layout_constraintTop_toBottomOf="@id/tabLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/guideline_right"
        app:layout_constraintGuide_begin="24dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbarMedia" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp"
        app:layout_constraintTop_toBottomOf="@+id/guideline_left" />

    <ImageView
        android:id="@+id/iv_main"
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:scaleType="centerCrop"
        android:src="@drawable/placeholder"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/tv_track_name"
        app:layout_constraintDimensionRatio="h,16:16"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/toolbarMedia" />

    <TextView
        android:id="@+id/tv_track_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/track_name"
        android:textColor="@color/primary_text"
        android:textSize="22sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/tv_artist_name"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline_left" />

    <TextView
        android:id="@+id/tv_artist_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/artist_name"
        android:textColor="@color/primary_text"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/ib_play"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_track_name" />

    <ImageView
        android:id="@+id/ib_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:src="@drawable/ic_play_button"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/tv_time_track"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left" />

    <ImageView
        android:id="@+id/ib_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:src="@drawable/ic_add_to_playlist"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/ib_play"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toTopOf="@+id/ib_play" />


    <ImageView
        android:id="@+id/ib_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:src="@drawable/ic_like"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/ib_play"
        app:layout_constraintEnd_toEndOf="@+id/guideline_right"
        app:layout_constraintTop_toTopOf="@+id/ib_play" />

    <TextView
        android:id="@+id/tv_time_track"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/track_time"
        android:textColor="@color/primary_text"
        android:textSize="14sp"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/tv_duration"
        app:layout_constraintEnd_toEndOf="@+id/ib_play"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="@+id/ib_play" />

    <TextView
        android:id="@+id/tv_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:fontFamily="@font/ys_display_regular"
        android:text="@string/country"
        android:textSize="13sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_genre"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <TextView
        android:id="@+id/tv_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:fontFamily="@font/ys_display_regular"
        android:text="@string/genre"
        android:textSize="13sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/tv_country"
        app:layout_constraintStart_toStartOf="@+id/tv_year" />

    <TextView
        android:id="@+id/tv_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:fontFamily="@font/ys_display_regular"
        android:text="@string/year"
        android:textSize="13sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/tv_genre"
        app:layout_constraintStart_toStartOf="@+id/tv_album" />

    <TextView
        android:id="@+id/tv_album"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:fontFamily="@font/ys_display_regular"
        android:text="@string/album"
        android:textSize="13sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/tv_year"
        app:layout_constraintStart_toStartOf="@+id/tv_duration" />

    <TextView
        android:id="@+id/tv_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="17dp"
        android:fontFamily="@font/ys_display_regular"
        android:text="@string/duration"
        android:textSize="13sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/tv_album"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <TextView
        android:id="@+id/tv_country_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:fontFamily="@font/ys_display_regular"
        android:text="@string/country"
        android:textColor="@color/primary_text"
        android:textSize="13sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_genre_value" />

    <TextView
        android:id="@+id/tv_genre_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:fontFamily="@font/ys_display_regular"
        android:text="@string/genre"
        android:textColor="@color/primary_text"
        android:textSize="13sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/tv_country_value"
        app:layout_constraintEnd_toEndOf="@+id/tv_year_value" />

    <TextView
        android:id="@+id/tv_year_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:fontFamily="@font/ys_display_regular"
        android:text="@string/year"
        android:textColor="@color/primary_text"
        android:textSize="13sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/tv_genre_value"
        app:layout_constraintEnd_toEndOf="@+id/tv_album_value" />

    <TextView
        android:id="@+id/tv_album_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:ellipsize="end"
        android:maxWidth="300dp"
        android:maxLines="1"
        android:fontFamily="@font/ys_display_regular"
        android:text="@string/album"
        android:textColor="@color/primary_text"
        android:textSize="13sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/tv_year_value"
        app:layout_constraintEnd_toEndOf="@+id/tv_duration_value" />

    <TextView
        android:id="@+id/tv_duration_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="17dp"
        android:fontFamily="@font/ys_display_regular"
        android:text="@string/duration"
        android:textColor="@color/primary_text"
        android:textSize="13sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/tv_album_value"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>